# stage-brain

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: coding-conventions.md  git-conventions.md
.claude/projekt/: DOMENY_PYTANIA.md  SESJE_ARCHITEKTONICZNE.md  StageBrain_Dokumentacja_Kompletna.md  UI_PLAN.md
.github/workflows/: lint.yml
ai/: SESJE_ARCHITEKTONICZNE.md  StageBrain_Architektura_i_Plan.md  StageBrain_Strategia_Pracy_z_AI.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/scripts/: seed.py
apps/api/src/: main.py
apps/api/src/core/: database.py  settings.py
apps/api/src/models/: __init__.py  base.py  engagement.py  recommendation.py  report.py  setlist.py  show.py  tag.py  timeline.py  venue.py
apps/api/src/routers/: segments.py  templates.py
apps/api/src/schemas/: segments.py  templates.py
apps/api/src/services/: segments.py  templates.py
apps/api/tests/: conftest.py
apps/api/tests/models/: test_constraints.py  test_engagement.py  test_setlist.py  test_show.py  test_timeline.py  test_venue.py
apps/api/tests/routers/: test_segments.py  test_templates.py
apps/api/tests/services/: test_segments.py
apps/web/: biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  router.tsx
docs/: .docs-meta.json  index.md
docs/00-start-here/: README.md  conventions.md  glossary.md  how-to-use-this-docs.md
docs/01-product/: README.md  nfr.md  personas.md  roadmap.md  user-journeys.md  vision.md
docs/01-product/features/: README.md  audio-analysis.md  data-export-reports.md  dynamic-setlist.md  (+7 more)
docs/02-architecture/: README.md  stagebrain-implementation-plan.md  system-overview.md
docs/03-development/: README.md  branching-and-versioning.md  ci-cd.md  coding-standards.md  infrastructure.md  local-setup.md  repo-structure.md  testing-strategy.md  troubleshooting.md
docs/04-operations/: README.md  backup-and-recovery.md  environments.md  release-and-rollback.md
docs/05-security/: README.md  authn-authz.md  data-privacy.md  secure-coding-checklist.md  security-overview.md  threat-model.md
docs/06-templates/: README.md  adr.md  feature-overview.md  postmortem.md  rfc.md  runbook.md
infra/: Dockerfile.api  Dockerfile.web
(+192 files in other folders)
