[project]
name = "stagebrain-api"
version = "0.1.0"
description = "StageBrain — real-time decision support for live shows"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print (no print())
    "DTZ",    # flake8-datetimez (timezone-aware datetimes)
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific rules
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "C4",     # flake8-comprehensions
    "ISC",    # flake8-implicit-str-concat
]
ignore = [
    "ARG001",  # unused function argument — FastAPI Depends() pattern
    "B008",    # function call in default argument — FastAPI Depends()
    "RUF012",  # mutable class variable — SQLAlchemy models
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "T20",     # print is fine in tests
    "S105",    # hardcoded passwords OK in test fixtures
    "S106",    # hardcoded passwords OK in test fixtures
    "ARG",     # unused args OK in test fixtures
]
"alembic/**/*.py" = [
    "F401",    # unused imports in migrations
    "E501",    # line length in auto-generated code
]
"scripts/**/*.py" = [
    "T20",     # print is fine in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
